<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/entire_screen"
    tools:context=".panels.main_activities.CalendarActivity">

    <TextView
        android:id="@+id/calendar_screen_year_month"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:minWidth="200dp"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/calendar_screen_month_right"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".05"
        app:layout_constraintStart_toEndOf="@id/calendar_screen_month_left"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calendar_screen_month_left"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:background="@android:color/transparent"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/left_arrow"
        android:textColor="#939393"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/calendar_screen_year_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calendar_screen_month_right"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:background="@android:color/transparent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/right_arrow"
        android:textColor="#939393"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/calendar_screen_year_month" />



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar_screen_calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="5dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_max="wrap"
        app:layout_constraintBottom_toTopOf="@+id/calendar_screen_add_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendar_screen_year_month"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/calendar_screen_add_event"
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_marginHorizontal="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/add_an_event"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/nav_bar"
        app:layout_constraintEnd_toStartOf="@id/calendar_screen_view_change"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".49"/>

    <Button
        android:id="@+id/calendar_screen_view_change"
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_marginHorizontal="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:text="@string/cycle_view"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/nav_bar"
        app:layout_constraintStart_toEndOf="@id/calendar_screen_add_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".11"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".49"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>