...
    <string name="tap_to_modify">Tap to modify</string>
    <string name="add_remove_assignee">Add/remove assignee</string>
    <string name="assignees_button">Assignees</string>

    <!-- Calendar view and its buttons -->
    <string name="cycle_calendar_views" translatable="false">↻</string>
    <string name="no_events">No events on this day.</string>
    <string name="refresh_calendar_fail">Could not refresh.</string>
    <string name="calendar_upcoming_date">On the %1$s.</string>
    <string name="left_arrow" translatable="false"><![CDATA[<]]></string>
    <string name="right_arrow" translatable="false"><![CDATA[>]]></string>
    <string name="pick_a_date_and_time">Pick a date and time</string>
    <string name="no_attachment">Could not find the attachment</string>

    <!-- Event creation and information popups -->
    <string name="event_creation_title">Add an event</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="add_text">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="event_editing_title">Edit event</string>
...
